--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">kandidatos</string>
-    <string name="title_activity_candidate_profile">Candidate Profile</string>
+    <string name="title_activity_biography">BiographyActivity</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
 </resources>
