Added Accomplishments section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,13 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="lorem_ipsum_list">
+        \n&#8226;Lorem ipsum
+        \n&#8226;Dolor sit
+        \n&#8226;Consectetuer
+        \n&#8226;Adipiscing elit
+        \n&#8226;Diam
+        \n&#8226;Nonummy nibh
+        \n&#8226;Tincidunt
+    </string>
 </resources>
